# qa-auto-engineer-python-project-241

./: .coverage  .gitignore  Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: py-check.yml
gendiff/: engine.py  parser.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: expected_json.txt
